--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,20 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Real Estate Mini App</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Telegram Mini App</title>
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <div class="container">
-    <h1>Поиск недвижимости</h1>
-    <input type="text" id="queryInput" placeholder="Что вы ищете?" />
-    <button onclick="startVoiceInput()">🎤 Говорить</button>
-    <button onclick="search()">🔍 Найти</button>
-    <div id="result"></div>
-  </div>
-  <script src="https://telegram.org/js/telegram-web-app.js"></script>
-  <script src="script.js"></script>
+    <div class="top-image">
+        <img src="images/design.png" alt="Design" />
+    </div>
+    <div class="theme-switch">
+        <label>
+            <input type="checkbox" id="themeToggle" /> 🌙
+        </label>
+    </div>
+
+    <div class="container center-content">
+        <form id="searchForm">
+            <div class="search-box">
+                <input type="text" id="queryInput" placeholder="Введите запрос..." />
+                <button type="submit" class="search-icon">🔍</button>
+                <button type="button" class="voice-btn" id="voiceBtn">🎤</button>
+            </div>
+        </form>
+
+        <div class="result-container" id="result">Здесь будут результаты...</div>
+    </div>
+
+    <div class="bottom-nav">
+        <div class="nav-item active"><img src="images/smart-home.png" alt="Home" class="nav-icon" /></div>
+        <div class="nav-item"><img src="images/location.png" alt="Location" class="nav-icon" /></div>
+        <div class="nav-item"><img src="images/heart.png" alt="Heart" class="nav-icon" /></div>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
